# gitool

./: README.md  main.py  pyproject.toml  setup.py
gtool/: cli.py
