[project]
name = "gitool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "build>=1.2.2.post1",
    "pip>=25.1.1",
    "setuptools>=80.9.0",
]
[project.scripts]
gtool = "gtool.cli:main"
acp = "gtool.cli:handle_acp"
gnew = "gtool.cli:handle_gnew"